--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="191dp"
         android:layout_height="155dp"
-        app:srcCompat="@drawable/Logo"
+        app:srcCompat="@drawable/logo"
         tools:layout_editor_absoluteX="97dp"
         tools:layout_editor_absoluteY="38dp" />
 
